# kinkaseki

./: .gitignore  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.in  configure.scan  pretty-cluster
script/: Makefile.am  Makefile.in  ok  renew-facet
src/: .gitignore  Makefile.am  Makefile.in  blm.cpp  collect.cpp  common.h  compat.h  compile.cpp  descent.cpp  evaluate_segmentation.cpp  expatpp.h  gii.h  gii_index.cpp  gii_invert.cpp  gii_parse.cpp  gii_tokenize.cpp  glue.cpp  kmeans.cpp  lda.cpp  lm  lm.cpp  magicbox.h  merge.cpp  porter.c  porter.h  prep.cpp  slda.cpp  tokenize.cpp  ubt.cpp
src/kinkaseki/: CJKVSeparator.h  CJKVSeparator.hpp  CLI.h  CLI.hpp  ExternalMerger.hpp  ExternalSorter.hpp  Lexicon.h  Lexicon.hpp  LineInputIterator.hpp  LineOutputIterator.hpp  LineReader.h  LineReader.hpp  PorterStemmer.h  PriorityQueue.h  PriorityQueue.hpp  StopList.h  StopList.hpp  functors.hpp
src/obsolete/: kmeans.cpp  lda.cpp  merge.cpp  sim.cpp
src/obsoleted/: expatpp_callback.h  gii_model1.cpp  gii_model2.cpp  gii_model3.cpp  gii_parse.cpp  lm.h
