#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(lm,1.0,lm-1.0-maintainer.org)
AM_INIT_AUTOMAKE(lm,1.0)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([expat.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

AC_CXX_HEADER_UNORDERED_MAP
AC_CXX_HEADER_TR1_UNORDERED_MAP
AM_CONDITIONAL([USE_CXX0X], [test $ac_cv_cxx_unordered_map = yes])

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 script/Makefile])
AC_OUTPUT
